[project]
name = "uniswap-rsi-testing-strategy"
version = "1.0.0"
description = "RSI mean reversion strategy - buys when oversold, sells when overbought on Uniswap V3"
requires-python = ">=3.12"
dependencies = [
    "almanak>=2.3.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit",
]
