[project]
name = "uniswap-rsi-testing-strategy"
version = "1.0.0"
description = "RSI mean reversion strategy - buys when oversold, sells when overbought on Uniswap V3"
requires-python = ">=3.12"
dependencies = [
    "almanak==2.11.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit",
]

[tool.almanak]
framework = "v2"

[tool.almanak.run]
interval = 60
